# iPerfDemo-runtime

./: README.md  build.gradle  settings.gradle
app/: .gitignore  build.gradle
app/src/androidTest/java/com/shenyong/iperf/runtime/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: iperf3  iperf3-arm64-v8a  iperf3-armeabi-v7a  iperf3-x86
app/src/main/java/com/iperf3/cmd/: CmdCallback.kt  DevUtils.kt  Iperf3Cmd.kt
app/src/main/java/com/iperf3/jni/: Iperf3Callback.java  Iperf3Client.java  Iperf3Config.java
app/src/main/java/com/shenyong/iperf/runtime/: CmdFragment.kt  CmdViewModel.kt  Iperf3Cmd.kt  JniFragment.kt  JniViewModel.kt  MainActivity.kt  MainViewModel.kt
app/src/main/java/com/shenyong/iperf/runtime/widget/: ArcProgressPannelView.kt
app/src/main/jni/: Android.mk  AndroidLog.h  Application.mk  CMakeLists.txt  common_jni_util.c  common_jni_util.h  iperf3_java_callback.c  iperf3_java_callback.h  iperf3_jni_api.c  iperf3_jni_api.h  show_my_change.sh
app/src/main/jni/cmake_build/: build  iperf3
app/src/main/jni/iperf-3.1.3/src/: iperf.h  iperf_api.c  iperf_api.h  iperf_error.c  main.c
app/src/main/res/layout/: activity_main.xml  cmd_fragment.xml  jni_fragment.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml
app/src/test/java/com/shenyong/iperf/runtime/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
